syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package guru.qa.photocatalog;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.photocatalog";
option java_outer_classname = "PhotocatalogProto";

service PhotocatalogService {
  rpc Photo(IdRequest) returns (PhotoResponse) {}
  rpc AddPhoto(PhotoRequest) returns (PhotoResponse) {}
  rpc RandomPhotos(CountRequest) returns (stream PhotoResponse) {}
}

message IdRequest {
  string id = 1;
}

message CountRequest {
  uint32 count = 1;
}

message PhotoResponse {
  string id = 1;
  string description = 2;
  google.protobuf.Timestamp lastModifyDate = 3;
  string content = 4;
}

message PhotoRequest {
  string description = 1;
  string content = 2;
}
